--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "tsc:w": "tsc --watch",
     "start": "concurrently \"npm run tsc:w\" \"superstatic\" \"webpack --watch\"",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "karma start"
   },
   "repository": {
     "type": "git",
@@ -19,6 +19,12 @@
   "homepage": "https://github.com/DarioG/typescript-test-project#readme",
   "devDependencies": {
     "concurrently": "^3.1.0",
+    "jasmine-core": "^2.5.2",
+    "karma": "^1.3.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-jasmine": "^1.0.2",
+    "karma-webpack": "^1.8.0",
+    "react-addons-test-utils": "^15.3.2",
     "source-map-loader": "^0.1.5",
     "superstatic": "^4.0.3",
     "ts-loader": "^0.9.5",
