--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "homepage": "https://github.com/DarioG/typescript-test-project#readme",
   "devDependencies": {
     "concurrently": "^3.1.0",
+    "es6-promise": "^4.0.5",
+    "jasmine-ajax": "^3.2.0",
     "jasmine-core": "^2.5.2",
     "karma": "^1.3.0",
     "karma-chrome-launcher": "^2.0.0",
