--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "karma": "^1.3.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-jasmine": "^1.0.2",
+    "karma-jasmine-ajax": "^0.1.13",
+    "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^1.8.0",
     "react-addons-test-utils": "^15.3.2",
     "source-map-loader": "^0.1.5",
